@@ -1,6 +1,7 @@
 TODO
 ====
-2.
+2. TODO v testu get_stations() method.
+3.
 
 Applied
 =======
